--- a/frontend/src/AdminPanel/style/admingallery.css
+++ b/frontend/src/AdminPanel/style/admingallery.css
@@ -1,5 +1,5 @@
 .admin-gallery {
-    max-width: 600px;
+    max-width: 500px;
     margin: 50px auto;
     text-align: center;
 
@@ -14,7 +14,7 @@
     }
 
     button {
-        padding: 10px;
+        padding: 6px 13px;
         background: #007bff;
         color: white;
         border: none;
@@ -44,6 +44,7 @@
     }
 
     .gallery-item button {
+        padding: 0px 13px;
         position: absolute;
         top: 5px;
         right: 5px;
