--- a/frontend/src/AdminPanel/style/admingallery.css
+++ b/frontend/src/AdminPanel/style/admingallery.css
@@ -1,5 +1,5 @@
 .admin-gallery {
-    max-width: 500px;
+    max-width: 800px;
     margin: 50px auto;
     text-align: center;
 
@@ -39,8 +39,9 @@
 
     .gallery-item img {
         width: 100%;
-        height: auto;
-        border-radius: 5px;
+        height: 20vh;
+        object-fit: cover;
+        display: block;
     }
 
     .gallery-item button {
