--- a/frontend/src/AdminPanel/components/sidebar.css
+++ b/frontend/src/AdminPanel/components/sidebar.css
@@ -12,6 +12,7 @@
   flex-direction: column;
   align-items: center;
   transition: transform 0.3s ease-in-out;
+  z-index: 10000;
 }
 
 /* Sidebar Heading */
@@ -98,7 +99,7 @@
     color: white;
     border: none;
     font-size: 1.1rem;
-    padding: 5px;
+    padding: 7px;
     cursor: pointer;
     border-radius: 5px;
     z-index: 1000;
