--- a/frontend/src/AdminPanel/style/adminhome.css
+++ b/frontend/src/AdminPanel/style/adminhome.css
@@ -24,7 +24,7 @@
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-    text-align: left;
+    text-align: center;
   }
 
   .upload-container {
@@ -42,7 +42,7 @@
   .preview-img {
     width: 100%;
     max-width: 150px;
-    height: auto;
+    height: 150px;
     border-radius: 5px;
     margin-top: 10px;
   }
@@ -54,7 +54,7 @@
 
   textarea {
     width: 100%;
-    height: 100px;
+    height: 200px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
