--- a/frontend/src/AdminPanel/style/adminpublications.css
+++ b/frontend/src/AdminPanel/style/adminpublications.css
@@ -52,6 +52,7 @@
         margin: 10px 0;
         border-radius: 5px;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        text-wrap: wrap;
     }
 
     button {
