--- a/frontend/src/AdminPanel/style/adminstats.css
+++ b/frontend/src/AdminPanel/style/adminstats.css
@@ -64,4 +64,19 @@
     .chart h3 {
         margin-bottom: 10px;
     }
+    @media (max-width: 768px) {
+        .charts-container{
+            flex-direction: column;
+
+        }
+        .chart{
+            width: 100%;
+            margin: 10px 0;
+            padding: 8px 15px;
+            padding-left: 0px;
+
+        }
+
+    }
+    
 }
